# divide-and-conquer-sentiment

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: mlp_training.ipynb  pm_mlp_training.ipynb
src/divide_and_conquer_sentiment/: __init__.py  constituents.py  dacs_model.py  dataloaders.py  divide.py  evaluation.py  model.py  sentiment_model.py
src/divide_and_conquer_sentiment/aggregation/: __init__.py  base.py  func.py  mlp.py  sawon.py
src/divide_and_conquer_sentiment/subprediction/: __init__.py  absa.py  base.py  sentence.py
tests/: chunk_subpredictor_test.py  chunker_test.py  divide_test.py  test_chunk_subpredictor.py  test_constituents.py  test_datasets.py  test_sentiment_model.py  test_spacy.py  test_utils.py
tests/test_aggregation/: test_aggregator_base.py  test_func_aggregator.py  test_sawon.py
tests/test_subprediction/: test_chunk_subpredictor.py  test_chunker.py
