[project]
name = "divide-and-conquer-sentiment"
version = "0.1.0"
description = "Improved Sentiment Classification by Constituent Conflict Resolution"
authors = [
    {name = "Jan Kościałkowski", email = "jan.koscialkowski@gmail.com"},
    {name = "Paweł Marcinkowski", email = "marcinkowski.paw@gmail.com"}
    ]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.10.12"
dependencies = [
    "datasets",
    "kaggle",
    "torch",
    "torch",
    "pydantic",
    "spacy",
    "pysbd",
    "claucy @ git+https://github.com/mmxgn/spacy-clausie.git"
]
[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "ruff"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "I"
]
extend-select = ["E501"]
